[workspace]
resolver = "2"
members = [
  'day_01', 
  'day_02', 
  'day_03', 
  'day_04', 
  'day_05', 
  'day_06', 
  'utils',
]

[workspace.dependencies]
err-into = "1.0.1"
itertools = "0.13.0"
time = { version = "0.3.36", features = ["macros"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3", features = ["local-time", "fmt", "env-filter", "time"] }
