[workspace]
resolver = "2"
members = [
  'day_01', 
  'day_02', 
  'day_03', 
  'day_04', 
  'day_05', 
  'day_06', 
  'day_07', 
  'day_08',
  'day_09',
  'day_10',
  'day_11',
  'day_12',
  'day_13',
  'day_14',
  'day_15',
  'utils',
]

[workspace.dependencies]
err-into = "1.0.1"
im = "15.1.0"
itertools = "0.13.0"
num = { version = "0.4" }
time = { version = "0.3.36", features = ["macros"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3", features = ["local-time", "fmt", "env-filter", "time"] }
tramp = { version = "0.3" }