[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
console = "0.15.8"
err-into = { workspace = true}
itertools = { workspace = true}
num = { workspace = true }
pico-args = "0.5.0"
thiserror = "1.0.41"
time = { workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
